# asag-perturbation-framework

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_BRIEF_Tesi.md  README.md  email-prof-20260320.md  pyproject.toml  requirements.txt  struttura-progetto.html
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bibliography/: literature-review-draft.md  master-bibliography.bib  search-methodology.md
bibliography/theme-1-asag-methods/: annotations.md
bibliography/theme-2-adversarial-perturbation/: annotations.md
bibliography/theme-3-educational-validity/: annotations.md
bibliography/theme-4-llm-automated-assessment/: annotations.md
docs/: build_proposta_pdf.py  build_risposta_pdf.py  md_to_pdf.py  methodology-proposal-en.html  project-summary.html  project-summary.md  proposta-professore.html  proposta-professore.md  risposta-professore.html  risposta-professore.md
examples/: basic_evaluation.py  llm_grader_comparison.py
paper/: IFKAD2026_Sasso_DeMauro.docx  IFKAD2026_Sasso_DeMauro_v2.docx  IFKAD2026_Sasso_DeMauro_v3.docx  IFKAD2026_Sasso_DeMauro_v4.docx  _preliminary_analysis.md  arxiv_extended.md  draft_sections.md
runs/analysis/: deletion_missed_cases.txt  deletion_missed_cases_annotated.txt  deletion_review_summary.md  mcnemar_tests.json  sensitivity_deep.json  sensitivity_patterns.json
scripts/: analyze_floor_effect.py  analyze_negation.py  analyze_sensitivity_deep.py  analyze_sensitivity_patterns.py  convert_batch_results.py  extract_deletion_cases.py  first_real_run.py  generate_figure_1.py  mcnemar_tests.py  prepare_batch.py  run_llm_experiments.py  submit_batch.py  submit_batch_chunked.py
src/asag/: cli.py  (+1 more)
tests/: conftest.py  test_gates.py  test_generators.py  test_perturbation_engine.py
(+55 files in other folders)
