[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asag-perturbation"
version = "0.1.0"
description = "Perturbation-based robustness evaluation framework for Automated Short Answer Grading systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ferdinando Sasso" },
    { name = "Andrea De Mauro" },
]
keywords = [
    "asag",
    "automated-grading",
    "nlp",
    "perturbation-testing",
    "robustness",
    "educational-assessment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "datasets>=4.0",
    "scikit-learn>=1.0",
    "numpy>=1.20",
    "sentence-transformers>=5.0",
    "nltk>=3.8,<4.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
asag = "asag.cli:main"

[project.urls]
Homepage = "https://github.com/nando-sasso/asag-perturbation"
Repository = "https://github.com/nando-sasso/asag-perturbation"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
